# deepview-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: pypi.yml
deepview/datasets/generators/: __init__.py  core.py  detection.py
deepview/datasets/iterators/: __init__.py  core.py  detection.py
deepview/datasets/readers/: __init__.py  arrow.py  coco.py  core.py  csv.py  darknet.py  pascal.py  radar.py
deepview/datasets/utils/: progress.py
deepview/datasets/writers/: __init__.py  core.py  polars.py
demos/python/: darknet-to-polars-detection.ipynb  export-coco-darkner-to-polars.ipynb  object-detection-iterators.ipynb
notebooks/: darknet-tf-iterator.ipynb  darknet-to-polars-detection.ipynb  generic-tf-iterator.ipynb  object-detection-iterators.ipynb  ultralytics-tf-iterator.ipynb
python/deepview/datasets/iterators/: core.py
python/deepview/datasets/readers/: arrow.py  coco.py  darknet.py
python/deepview/datasets/writers/: core.py  polars.py
python/deepview/nn/datasets/export/: core.py
python/deepview/nn/datasets/iterators/: __init__.py  core.py  detection.py
python/deepview/nn/datasets/readers/: __init__.py  arrow.py  coco.py  core.py  csv.py  darknet.py  deepview.py  pascal.py
python/deepview/nn/datasets/writers/: __init__.py  core.py  polars.py
