# Copyright 2024 by Au-Zone Technologies.  All Rights Reserved.
#
#  DUAL-LICENSED UNDER AGPL-3.0 OR DEEPVIEW AI MIDDLEWARE COMMERCIAL LICENSE
#    CONTACT AU-ZONE TECHNOLOGIES <INFO@AU-ZONE.COM> FOR LICENSING DETAILS

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepview-datasets"
version = "0.3.1"
description = "DeepView Datasets"
readme = "README.md"
authors = [{ name = "Au-Zone Technologies", email = "info@au-zone.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    'pillow',
    'polars',
    'tqdm',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["bumpver"]

[project.urls]
Homepage = "https://github.com/DeepViewML/deepview-datasets"

[tool.setuptools]
packages = [
    "deepview.datasets",
    "deepview.datasets.iterators",
    "deepview.datasets.readers",
    "deepview.datasets.writers",
]

[tool.bumpver]
current_version = "0.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Update version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
